--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sachsenspielt</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="./img/logo.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
