--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/60ffa3ba2d.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+
+    <!-- META -->
+    <meta name="description" content="Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS und Java">
+    <meta name="keywords" content="Sachsenspielt">
+    <meta name="author" content="Sachsenspielt">
+
+    <!-- title -->
+    <meta property='og:title'  content='Sachsenspielt'>
+    <meta name='twitter:title' content='Sachsenspielt'>
+
+    <!-- url -->
+    <link rel='canonical'       href='https://www.sachsenspielt.de/'>
+    <meta property='og:url'  content='https://www.sachsenspielt.de/'>
+    <meta name='twitter:url' content='https://www.sachsenspielt.de/'>
+
+    <!-- description -->
+    <meta name='description'         content='Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS und Java'>
+    <meta property='og:description'  content='Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS und Java'>
+    <meta name='twitter:description' content='Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS und Java'>
+
+    <!-- image -->
+    <meta property="og:image"  content="img/logofull.png">
+    <meta name="twitter:image" content="img/logofull.png">
+    <!-- ua -->
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 </head>
 <body>
     <div class="div background back1" id="start">
