updated last page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <div class="div background back4" id="buyme">
         <button onclick="scrollToID('minecraft')" class="btn btn_up"></button>
-        <h1 class="texthead_left fade_out_right">Mich kann man mieten! Oder so ähnlich...</h1>
-        <p class="text_left fade_out_right">Aktuell bin ich immer auf der Suche nach neuen Herrausforderungen. Neuen Projekten und Aufgaben die zu tun sind. Wenn du einen nicht gewerblichen Full Stack Developer für dein Projekt brauchst, kann ich dir bestimmt behilflich sein. Meine Spezialisierung liegt in Discord Bots sowie in dem Webdevelopment. Auch Minecraft Plugins/ Mods sind möglich.</p>
+        <h1 class="texthead_left fade_out_right">Mein "Geschäfts" Leben</h1>
+        <p class="text_left fade_out_right">Aktuell bin ich in einer größeren, geheimen Sachen verwickelt wozu ich zum jetzigen Zeuitpunkt leider noch nicht viel sagen kann. Wenn du jedoch kurzfristig einen Developer suchst für kleinere nicht gewerbliche Zwecke dann kannst du mich gerne unter <a href="mailto:business@sachsenspielt.de">business@sachsenspielt.de</a> kontaktieren. Von privaten Discord DM's / Werbung halte ich jedoch nichts!</p>
 
         <div class="imprint">
             <p><a href="imprint/">Impressum</a> » (c) 2021 Sachsenspielt « Made with <3 in Germany</p>
