--- a/gedicht/index.html
+++ b/gedicht/index.html
@@ -63,7 +63,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        color: wheat;
+        color: #ffffff;
         font-size: 22px;
         font-family: JetBrains Mono, sans-serif;
     }
