--- a/gedicht/index.html
+++ b/gedicht/index.html
@@ -49,6 +49,7 @@
     html {
         background-image: url("../img/background1.jpg");
         background-size: cover;
+        background-repeat: no-repeat;
     }
 
     body {
