--- a/gedicht/index.html
+++ b/gedicht/index.html
@@ -47,6 +47,8 @@
     }
 
     html {
+        height: 100%;
+        width: 100%;
         background-image: url("../img/background1.jpg");
         background-size: cover;
         background-repeat: no-repeat;
