Updated Web-Desc because zFlawless said Node.JS is not a language

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
 
     <!-- META -->
-    <meta name="description" content="Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS und Java">
+    <meta name="description" content="Website von Sachsenspielt. Full Stack Hobby Developer für Node.JS (Javascript) und Java">
     <meta name="keywords" content="Sachsenspielt">
     <meta name="author" content="Sachsenspielt">
 
