--- a/imprint/index.html
+++ b/imprint/index.html
@@ -15,7 +15,7 @@
     <br>
     <p>Angaben gemäß § 5 TMG | JEGLICHER MISSBRAUCH WIRD ZUR ANZEIGE GEBRACHT</p><br>
     <p>Finn Margraf<br>
-        Fritz-Heckert Straße<br>
+        Fritz-Heckert Straße 16<br>
         08060 Zwickau-Marienthal<br>
     </p><p><br><strong>Vertreten durch: </strong><br><br>
         Finn Margraf<br>
