--- a/src/index.html
+++ b/src/index.html
@@ -35,25 +35,30 @@
     </ul>
   </nav>
 
-  <body class="bg-background text-white font-sans">
+  <body class="bg-background text-white font-sans overflow-x-hidden">
     <div
       class="content snap-y snap-mandatory overflow-scroll h-screen scroll-smooth"
     >
       <section
-        class="snap-start flex flex-wrap items-center justify-between"
+        class="snap-start flex flex-wrap items-center justify-center p-5"
         id="home"
       >
         <div>
           <div class="w-fit">
-            <h1 class="font-extrabold text-4xl">SACHSΞΠSPIΞLT</h1>
-            <h2 class="font-bold text-2xl">Just Coding!</h2>
+            <h1 class="font-extrabold text-4xl lg:text-6xl">SACHSΞΠSPIΞLT</h1>
+            <h2 class="font-bold text-2xl lg:text-4xl lg:text-center">
+              Just Coding!
+            </h2>
           </div>
           <img src="img/logo.jpg" class="rounded-full w-full mt-12" />
         </div>
       </section>
 
-      <section id="about" class="flex items-center justify-between flex-wrap">
-        <p>
+      <section
+        id="about"
+        class="p-5 flex items-center justify-between flex-wrap lg:flex-nowrap lg:p-36"
+      >
+        <p class="lg:max-w-4xl lg:text-xl">
           Hi! I’m a German student from Saxony and in my free time a do some
           coding stuff or play some games. I know JavaScript and some basic
           Java. Currently I am working with some other people on a
@@ -67,13 +72,10 @@
           <a href="https://ppp-club.de/" class="text-gray-400">Click Me!</a>
         </p>
 
-        <img src="img/earth.jpg" alt="earth" />
+        <img src="img/earth.jpg" alt="earth" class="w-full max-w-4xl lg:ml-4" />
       </section>
 
-      <section
-        id="projects"
-        class="flex flex-wrap items-center justify-center p-0"
-      >
+      <section id="projects" class="flex flex-wrap items-center justify-center">
         <div>
           <h2 class="font-bold text-2xl text-center mb-4">
             My current projects
@@ -121,29 +123,32 @@
       <footer class="w-full h-fit">
         <div class="svg-footer w-full bg-no-repeat bg-center bg-cover"></div>
         <div class="content p-5 bg-logo-darkgreen">
-          <section class="h-full w-full">
+          <section class="h-full w-full p-5">
             <p class="text-center">
               (c) 2022 - Sachsenspielt • Made with ❤️ in Germany
             </p>
             <br />
-            <p class="font-bold">Imprint</p>
-            <p>
+            <p class="font-bold md:text-center">Imprint</p>
+            <p class="md:text-center">
               Finn Margraf <br />
               Fritz-Heckert Straße 16 <br />
               D-08060 Zwickau-Marienthal
             </p>
             <br />
-            <p class="font-bold">Contact</p>
-            <p>
+            <p class="font-bold md:text-center">Contact</p>
+            <p class="md:text-center">
               Mail:
               <a href="mailto:mail@sachsenspielt.de">mail@sachsenspielt.de</a>
               <br />
               Telephone: +49 1515 0790887
-              <br />
-              <br />
-              Please keep in mind, that using this personal information for
-              trolling is illegal and will be punished.
             </p>
+            <br />
+            <div class="flex justify-center w-full">
+              <p>
+                Please keep in mind, that using this personal information for
+                trolling is illegal and will be punished.
+              </p>
+            </div>
           </section>
         </div>
       </footer>
