Added some metadata

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,40 @@
       src="https://kit.fontawesome.com/60ffa3ba2d.js"
       crossorigin="anonymous"
     ></script>
+
+    <!--- === META === -->
+    <meta name="description" content="This is my little profile page." />
+    <meta name="og:description" content="This is my little profile page." />
+    <meta
+      name="twitter:description"
+      content="This is my little profile page."
+    />
+
+    <meta name="keywords" content="Sachsenspielt" />
+    <meta name="author" content="Sachsenspielt" />
+
+    <!-- title -->
+    <meta property="og:title" content="Sachsenspielt - Just Coding." />
+    <meta name="twitter:title" content="Sachsenspielt - Just Coding." />
+
+    <!-- url -->
+    <link rel="canonical" href="https://www.sachsenspielt.de/" />
+    <meta property="og:url" content="https://www.sachsenspielt.de/" />
+    <meta name="twitter:url" content="https://www.sachsenspielt.de/" />
+
+    <!-- image -->
+    <meta
+      property="image"
+      content="https://www.sachsenspielt.de/img/logo.jpg"
+    />
+    <meta
+      property="og:image"
+      content="https://www.sachsenspielt.de/img/logo.jpg"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.sachsenspielt.de/img/logo.jpg"
+    />
   </head>
 
   <nav
