Anchors now redirect to a new tab

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,9 @@
           <br />
           I am also in a programming club named "PPP". It stands for "Platte
           Pizza Programmieren". Here is the website of the programming club:
-          <a href="https://ppp-club.de/" class="text-gray-400">Click Me!</a>
+          <a href="https://ppp-club.de/" target="_blank" class="text-gray-400"
+            >Click Me!</a
+          >
         </p>
 
         <img src="img/earth.jpg" alt="earth" class="w-full max-w-4xl lg:ml-4" />
@@ -123,7 +125,7 @@
                 Current Role: <br />
                 Tech. Administrator
               </p>
-              <a href="https://www.notovia.de/"
+              <a href="https://www.notovia.de/" target="_blank"
                 ><img
                   src="img/notovia.jpg"
                   class="w-12 float-right rounded-full mt-2"
@@ -172,7 +174,9 @@
             <p class="font-bold md:text-center">Contact</p>
             <p class="md:text-center">
               Mail:
-              <a href="mailto:mail@sachsenspielt.de">mail@sachsenspielt.de</a>
+              <a href="mailto:mail@sachsenspielt.de" target="_blank"
+                >mail@sachsenspielt.de</a
+              >
               <br />
               Telephone: +49 1515 0790887
             </p>
