--- a/r/grw/index.html
+++ b/r/grw/index.html
@@ -7,13 +7,13 @@
     <title>Weiterleitung...</title>
     <meta
       http-equiv="refresh"
-      content="0; url='https://forms.gle/6wzqtiEcvh8tEaMZ8'"
+      content="0; url='https://docs.google.com/presentation/d/1K-dcyaR4YIV3AxBZZ53rzY8dfSfHjG3VPE9PTYTLmMM/edit?usp=drivesdk'"
     />
   </head>
   <body>
     <p>
       Hat die Weiterleitung nicht geklappt? Klicke
-      <a href="https://forms.gle/6wzqtiEcvh8tEaMZ8">hier</a>
+      <a href="https://docs.google.com/presentation/d/1K-dcyaR4YIV3AxBZZ53rzY8dfSfHjG3VPE9PTYTLmMM/edit?usp=drivesdk">hier</a>
     </p>
   </body>
 </html>
