--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         class="p-5 flex items-center justify-between flex-wrap lg:flex-nowrap lg:p-36"
       >
         <p class="lg:max-w-4xl lg:text-xl">
-          Hi! I’m a German student from Saxony and in my free time I do some
+          Hi! I'm a German student from Saxony and in my free time I do some
           coding stuff or play some games. I know JavaScript and some basic
           Java. Currently I am working with some other people on a
           Minecraft-Roleplay server called “Notovia”. I also really like the
@@ -146,7 +146,7 @@
           <div class="flex items-center justify-center h-12 mt-4">
             <span>You can also visit my GitHub!</span>
             <a
-              href="https://github.com/Sachsenspielt96"
+              href="https://github.com/SachsenspieltCoding"
               target="_blank"
               class="ml-2"
             >
