--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             <p class="font-bold md:text-center">Imprint</p>
             <p class="md:text-center">
               Finn Margraf <br />
-              Fritz-Heckert Straße 16 <br />
-              D-08060 Zwickau-Marienthal
+              Wittichenauer Straße 17 <br />
+              D-02977 Hoyerswerda
             </p>
             <br />
             <p class="font-bold md:text-center">Contact</p>
