updated about me and projects

--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
         <p class="lg:max-w-4xl lg:text-xl">
           Hi! I'm a German student from Saxony and in my free time I do some
           coding stuff or play some games. I know JavaScript and some basic
-          Java. Currently I am working with some other people on a
-          Minecraft-Roleplay server called “Notovia”. I also really like the
-          space and rockets, primarily I appreciate companies like SpaceX. At
-          school I am also a technician for events.
+          Java. Currently, I am working on a discord bot in TypeScript for a roleplay project in Farming Simulator 2022.
+          I also really like the space and rockets, primarily I appreciate companies like SpaceX.
+          At school, I am also a technician for events.
           <br />
           <br />
           I am also in a programming club named "PPP". It stands for "Platte
@@ -129,6 +128,21 @@
                 ><img
                   src="img/notovia.jpg"
                   class="w-12 float-right rounded-full mt-2"
+              /></a>
+            </div>
+
+            <div class="item">
+              <h3>LS22 ROLEPLAY PROJECT</h3>
+              <p>A deep-dive Farming Simulator 2022 roleplay server.</p>
+              <br />
+              <p>
+                Current Role: <br />
+                Serveradministration
+              </p>
+              <a href="#" target="_blank"
+              ><img
+                      src="img/ls22roleplayproject.jpg"
+                      class="w-12 float-right rounded-full mt-2"
               /></a>
             </div>
 
