--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li>
+        <a rel="me" href="https://mastodon.social/@sachsenspielt">Mastodon</a>
+      </li>
     </ul>
   </nav>
 
@@ -95,9 +98,10 @@
         <p class="lg:max-w-4xl lg:text-xl">
           Hi! I'm a German student from Saxony and in my free time I do some
           coding stuff or play some games. I know JavaScript and some basic
-          Java. Currently, I am working on a discord bot in TypeScript for a roleplay project in Farming Simulator 2022.
-          I also really like the space and rockets, primarily I appreciate companies like SpaceX.
-          At school, I am also a technician for events.
+          Java. Currently, I am working on a discord bot in TypeScript for a
+          roleplay project in Farming Simulator 2022. I also really like the
+          space and rockets, primarily I appreciate companies like SpaceX. At
+          school, I am also a technician for events.
           <br />
           <br />
           I am also in a programming club named "PPP". It stands for "Platte
@@ -140,9 +144,9 @@
                 Serveradministration
               </p>
               <a href="#" target="_blank"
-              ><img
-                      src="img/ls22roleplayproject.jpg"
-                      class="w-12 float-right rounded-full mt-2"
+                ><img
+                  src="img/ls22roleplayproject.jpg"
+                  class="w-12 float-right rounded-full mt-2"
               /></a>
             </div>
 
