mastodon opens now in a new window

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li>
-        <a rel="me" href="https://mastodon.social/@sachsenspielt">Mastodon</a>
+        <a
+          rel="me"
+          href="https://mastodon.social/@sachsenspielt"
+          target="_blanc"
+          >Mastodon</a
+        >
       </li>
     </ul>
   </nav>
