small changes in project section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <br />
               <p>
                 Current Role: <br />
-                Tech. Administrator
+                Tech. Administrator & Leading Developer
               </p>
               <a href="https://www.notovia.de/" target="_blank"
                 ><img
@@ -148,6 +148,8 @@
                 Current Role: <br />
                 Serveradministration
               </p>
+              <br />
+              <p class="font-bold">PROJECT ENDED</p>
               <a href="#" target="_blank"
                 ><img
                   src="img/ls22roleplayproject.jpg"
