small changes in aboutme section

--- a/index.html
+++ b/index.html
@@ -101,16 +101,18 @@
         class="p-5 flex items-center justify-between flex-wrap lg:flex-nowrap lg:p-36"
       >
         <p class="lg:max-w-4xl lg:text-xl">
-          Hi! I'm a German student from Saxony and in my free time I do some
-          coding stuff or play some games. I know JavaScript and some basic
-          Java. Currently, I am working on a discord bot in TypeScript for a
-          roleplay project in Farming Simulator 2022. I also really like the
-          space and rockets, primarily I appreciate companies like SpaceX. At
-          school, I am also a technician for events.
+          Hi! I'm a German student from Saxony and in my freetime I do some
+          coding stuff or play some games. I know JavaScript/TypeScript and some
+          basic Java. Currently, I am working at
+          <a href="https://www.notovia.de/" target="_blank">Notovia Roleplay</a
+          >. I also really like the space and rockets, primarily, I appreciate
+          companies like SpaceX. At school, I am also the leading technician for
+          events.
           <br />
           <br />
-          I am also in a programming club named "PPP". It stands for "Platte
-          Pizza Programmieren". Here is the website of the programming club:
+          I am also in a local programming club named "PPP". It stands for
+          "Platte Pizza Programmieren". Here is the website of the programming
+          club:
           <a href="https://ppp-club.de/" target="_blank" class="text-gray-400"
             >Click Me!</a
           >
@@ -143,11 +145,6 @@
             <div class="item">
               <h3>LS22 ROLEPLAY PROJECT</h3>
               <p>A deep-dive Farming Simulator 2022 roleplay server.</p>
-              <br />
-              <p>
-                Current Role: <br />
-                Serveradministration
-              </p>
               <br />
               <p class="font-bold">PROJECT ENDED</p>
               <a href="#" target="_blank"
