--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SACHSΞΠSPIΞLT</title>
+    <title>SACHSENSPIELT</title>
     <link rel="icon" href="favicon.ico" />
 
     <!--- Tailwind Import -->
@@ -73,7 +73,7 @@
       >
         <div>
           <div class="w-fit">
-            <h1 class="font-extrabold text-4xl lg:text-6xl">SACHSΞΠSPIΞLT</h1>
+            <h1 class="font-extrabold text-4xl lg:text-6xl">SACHSENSPIELT</h1>
             <h2 class="font-bold text-2xl lg:text-4xl lg:text-center">
               Just Coding!
             </h2>
@@ -119,7 +119,7 @@
               <br />
               <p>
                 Current Role: <br />
-                Tech. Administrator & Leading Developer
+                CIO & Head of Development
               </p>
               <a href="https://www.notovia.de/" target="_blank"
                 ><img
@@ -175,7 +175,6 @@
             <p class="font-bold md:text-center">Imprint</p>
             <p class="md:text-center">
               Finn Margraf <br />
-              Wittichenauer Straße 17 <br />
               D-02977 Hoyerswerda
             </p>
             <br />
