--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <p class="font-bold md:text-center">Imprint</p>
             <p class="md:text-center">
               Finn Margraf <br />
+			  Wittichenauer Straße 17 <br />
               D-02977 Hoyerswerda
             </p>
             <br />
