updated site -> under construction

--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
   </head>
 
   <nav
-    class="fixed flex justify-between items-center w-full max-h-14 bg-opacity-80 bg-black text-white p-5"
+    class="fixed flex justify-between items-center w-full max-h-24 bg-opacity-80 bg-black text-white p-5"
   >
     <img src="img/nav_logo.png" alt="logo" class="max-h-6" />
+
+    <div class="bg-red-500 p-4 rounded-md">
+      <p>
+        <b>Under Construction</b>
+        <br />
+        I am working on a rework. The information on this site can be outdated
+        and there can be bugs! There will be a new concept, and a new design.
+      </p>
+    </div>
 
     <ul class="flex gap-4">
       <li><a href="#home">Home</a></li>
@@ -175,7 +184,7 @@
             <p class="font-bold md:text-center">Imprint</p>
             <p class="md:text-center">
               Finn Margraf <br />
-			  Wittichenauer Straße 17 <br />
+              Wittichenauer Straße 17 <br />
               D-02977 Hoyerswerda
             </p>
             <br />
