--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
           </h2>
           <div class="grid gap-2">
             <div class="item">
+              <h3>EventControl</h3>
+              <p>EventControl is a private project for simple event organization<br>at our school. It will be maybe open source later.</p>
+              <br />
+              <p>
+                Current Role: <br />
+                the one and only
+              </p>
+              <a
+              ><img
+                      src="img/eventcontrol.jpg"
+                      class="w-12 float-right rounded-full mt-2"
+              /></a>
+            </div>
+
+            <div class="item">
               <h3>NOTOVIA ROLEPLAY</h3>
               <p>A realistic Minecraft roleplay server.</p>
               <br />
@@ -145,16 +160,6 @@
               <a href="#" target="_blank"
                 ><img
                   src="img/ls22roleplayproject.jpg"
-                  class="w-12 float-right rounded-full mt-2"
-              /></a>
-            </div>
-
-            <div class="item">
-              <h3>No other current projects...</h3>
-              <p>Lorem Ipsum dolor sit amet.</p>
-              <a href="#"
-                ><img
-                  src="img/logo.jpg"
                   class="w-12 float-right rounded-full mt-2"
               /></a>
             </div>
