--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <!--- Tailwind Import -->
     <link rel="stylesheet" href="tailwind.css" />
 
-    <!--- Fonts -->
-    <script
-      src="https://kit.fontawesome.com/60ffa3ba2d.js"
-      crossorigin="anonymous"
-    ></script>
-
     <!--- === META === -->
     <meta name="description" content="This is my little profile page." />
     <meta name="og:description" content="This is my little profile page." />
@@ -51,167 +45,9 @@
     />
   </head>
 
-  <nav
-    class="fixed flex justify-between items-center w-full max-h-24 bg-opacity-80 bg-black text-white p-5"
-  >
-    <img src="img/nav_logo.png" alt="logo" class="max-h-6" />
-
-    <div class="bg-red-500 p-4 rounded-md">
-      <p>
-        <b>Under Construction</b>
-        <br />
-        I am working on a rework. The information on this site can be outdated
-        and there can be bugs! There will be a new concept, and a new design.
-      </p>
-    </div>
-
-    <ul class="flex gap-4">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-    </ul>
-  </nav>
-
-  <body class="bg-background text-white font-sans overflow-x-hidden">
-    <div
-      class="content snap-y snap-mandatory overflow-scroll h-screen scroll-smooth"
-    >
-      <section
-        class="snap-start flex flex-wrap items-center justify-center p-5"
-        id="home"
-      >
-        <div>
-          <div class="w-fit">
-            <h1 class="font-extrabold text-4xl lg:text-6xl">SACHSENSPIELT</h1>
-            <h2 class="font-bold text-2xl lg:text-4xl lg:text-center">
-              Just Coding!
-            </h2>
-          </div>
-          <img src="img/logo.jpg" class="rounded-full w-full mt-12" />
-        </div>
-      </section>
-
-      <section
-        id="about"
-        class="p-5 flex items-center justify-between flex-wrap lg:flex-nowrap lg:p-36"
-      >
-        <p class="lg:max-w-4xl lg:text-xl">
-          Hi! I'm a German student from Saxony and in my freetime I do some
-          coding stuff or play some games. I know JavaScript/TypeScript and some
-          basic Java. Currently, I am working at
-          <a href="https://www.notovia.de/" target="_blank">Notovia Roleplay</a
-          >. I also really like the space and rockets, primarily, I appreciate
-          companies like SpaceX. At school, I am also the leading technician for
-          events.
-          <br />
-          <br />
-          I am also in a local programming club named "PPP". It stands for
-          "Platte Pizza Programmieren". Here is the website of the programming
-          club:
-          <a href="https://ppp-club.de/" target="_blank" class="text-gray-400"
-            >Click Me!</a
-          >
-        </p>
-
-        <img src="img/earth.jpg" alt="earth" class="w-full max-w-4xl lg:ml-4" />
-      </section>
-
-      <section id="projects" class="flex flex-wrap items-center justify-center">
-        <div>
-          <h2 class="font-bold text-2xl text-center mb-4">
-            My current projects
-          </h2>
-          <div class="grid gap-2">
-            <div class="item">
-              <h3>EventControl</h3>
-              <p>EventControl is a private project for simple event organization<br>at our school. It will be maybe open source later.</p>
-              <br />
-              <p>
-                Current Role: <br />
-                the one and only
-              </p>
-              <a
-              ><img
-                      src="img/eventcontrol.jpg"
-                      class="w-12 float-right rounded-full mt-2"
-              /></a>
-            </div>
-
-            <div class="item">
-              <h3>NOTOVIA ROLEPLAY</h3>
-              <p>A realistic Minecraft roleplay server.</p>
-              <br />
-              <p>
-                Current Role: <br />
-                CIO & Head of Development
-              </p>
-              <a href="https://www.notovia.de/" target="_blank"
-                ><img
-                  src="img/notovia.jpg"
-                  class="w-12 float-right rounded-full mt-2"
-              /></a>
-            </div>
-
-            <div class="item">
-              <h3>LS22 ROLEPLAY PROJECT</h3>
-              <p>A deep-dive Farming Simulator 2022 roleplay server.</p>
-              <br />
-              <p class="font-bold">PROJECT ENDED</p>
-              <a href="#" target="_blank"
-                ><img
-                  src="img/ls22roleplayproject.jpg"
-                  class="w-12 float-right rounded-full mt-2"
-              /></a>
-            </div>
-          </div>
-
-          <div class="flex items-center justify-center h-12 mt-4">
-            <span>You can also visit my GitHub!</span>
-            <a
-              href="https://github.com/SachsenspieltCoding"
-              target="_blank"
-              class="ml-2"
-            >
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <footer class="w-full h-fit">
-        <div class="svg-footer w-full bg-no-repeat bg-center bg-cover"></div>
-        <div class="content p-5 bg-logo-darkgreen">
-          <section class="h-full w-full p-5">
-            <p class="text-center">
-              (c) 2022 - Sachsenspielt • Made with ❤️ in Germany
-            </p>
-            <br />
-            <p class="font-bold md:text-center">Imprint</p>
-            <p class="md:text-center">
-              Finn Margraf <br />
-              Wittichenauer Straße 17 <br />
-              D-02977 Hoyerswerda
-            </p>
-            <br />
-            <p class="font-bold md:text-center">Contact</p>
-            <p class="md:text-center">
-              Mail:
-              <a href="mailto:mail@sachsenspielt.de" target="_blank"
-                >mail@sachsenspielt.de</a
-              >
-              <br />
-              Telephone: +49 1515 0790887
-            </p>
-            <br />
-            <div class="flex justify-center w-full">
-              <p>
-                Please keep in mind, that using this personal information for
-                trolling is illegal and will be punished.
-              </p>
-            </div>
-          </section>
-        </div>
-      </footer>
+  <body class="bg-black">
+    <div class="w-full h-screen flex items-center justify-center">
+      <img src="img/logo.jpg" class="rounded-full w-full max-w-lg" />
     </div>
   </body>
 </html>
